--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
