--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -9,16 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
